Fix overflow image header on homepage

--- a/version_control/Codurance_September2020/css/pages/homepage-v2.css
+++ b/version_control/Codurance_September2020/css/pages/homepage-v2.css
@@ -16,6 +16,7 @@ body{
 .homepage-hero{
     background: linear-gradient(180deg, rgba(253,237,226,1) 0%, rgba(255,255,255,1) 85%);
     padding-bottom: 4em;
+    overflow-x: hidden;
 }
 
 .homepage-hero .announcement-bar{
@@ -33,7 +34,6 @@ body{
     display: flex;
     flex-direction: column-reverse;
     padding: 1em;
-    overflow: hidden;
     max-width: var(--content-max-width);
     margin: 0 auto;
 }
